--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Welcome to the Best Bike!</p>
+<p>Welcome to the Best Bike 2018!</p>
